Structure for TR Items.

--- a/docs/items/armor/cloaking_device.mdx
+++ b/docs/items/armor/cloaking_device.mdx
@@ -2,9 +2,7 @@
 title: Cloaking Device
 ---
 
-import myImageUrl from '/img/techreborn/cloaking_device.png';
-
-<img src={myImageUrl} alt="Cloaking Device" style={{float: 'right'}} width="200"/>
+<ItemImage file="cloaking_device" alt="Cloaking Device" size="200" />
 
 A **Cloaking Device** is capable of hiding a player when placed in one's chest slot. 
 
