--- a/docs/items/armor/lithium_batpack.mdx
+++ b/docs/items/armor/lithium_batpack.mdx
@@ -2,9 +2,7 @@
 title: Lithium Batpack
 ---
 
-import myImageUrl from '/img/techreborn/lithium_batpack.png';
-
-<img src={myImageUrl} alt="Lithium Batpack" style={{float: 'right'}} width="200"/>
+<ItemImage file="lithium_batpack" alt="Lithium Batpack" size="200" />
 
 A **Lithium Batpack** is a chest slot worn item which can charge powered items in player inventory. It is capable of storing 600k Energy.
 
