--- a/docs/items/tools/tools.mdx
+++ b/docs/items/tools/tools.mdx
@@ -22,14 +22,14 @@ Powered tools serves as replacement for regular Minecraft tools and weapons like
 - Basic Jackhammer
 - Electric Tree tap
 
-## Advanced Tier
+### Advanced Tier
 
 - Advanced Chainsaw
 - Advanced Drill
 - Advanced Jackhammer
 - Rock Cutter
 
-## Industrial Tier
+### Industrial Tier
 
 - Industrial Chainsaw
 - Industrial Drill
