--- a/docs/dev/dev.mdx
+++ b/docs/dev/dev.mdx
@@ -9,3 +9,11 @@ Variouse pages related to mod, modpack or wiki development
 - [LibCD Support](libcd)
 - Minetweaker support
 
+## Mod development
+- MC 1.12
+- MC 1.16
+- MC 1.17
+
+## Wiki Guidelines
+- [Wiki](wiki)
+
