--- a/docs/items/ingots/ingots.mdx
+++ b/docs/items/ingots/ingots.mdx
@@ -7,26 +7,46 @@ title: Ingots
 
 Ingots are made from Ores.
 
-```
-- ![Aluminium Ingot](/media/mods/techreborn/aluminium_ingot.png){width="24" query="?nolink&24"} **[Aluminium Ingot](/items/ingot/aluminium_ingot)**
-- ![Brass Ingot](/media/mods/techreborn/brass_ingot.png){width="24" query="?nolink&24"} **[Brass Ingot](/items/ingot/brass_ingot)**
-- ![Bronze Ingot](/media/mods/techreborn/bronze_ingot.png){width="24" query="?nolink&24"} **[Bronze Ingot](/items/ingot/bronze_ingot)**
-- ![Chrome Ingot](/media/mods/techreborn/chrome_ingot.png){width="24" query="?nolink&24"} **[Chrome Ingot](/items/ingot/chrome_ingot)**
-- ![Electrum Ingot](/media/mods/techreborn/electrum_ingot.png){width="24" query="?nolink&24"} **[Electrum Ingot](/items/ingot/electrum_ingot)**
-- ![Invar Ingot](/media/mods/techreborn/invar_ingot.png){width="24" query="?nolink&24"} **[Invar Ingot](/items/ingot/invar_ingot)**
-- ![Iridium Ingot](/media/mods/techreborn/iridium_ingot.png){width="24" query="?nolink&24"} **[Iridium Ingot](/items/ingot/iridium_ingot)**
-- ![Lead Ingot](/media/mods/techreborn/lead_ingot.png){width="24" query="?nolink&24"} **[Lead Ingot](/items/ingot/lead_ingot)**
-- ![Nickel Ingot](/media/mods/techreborn/nickel_ingot.png){width="24" query="?nolink&24"} **[Nickel Ingot](/items/ingot/nickel_ingot)**
-- ![Platinum Ingot](/media/mods/techreborn/platinum_ingot.png){width="24" query="?nolink&24"} **[Platinum Ingot](/items/ingot/platinum_ingot)**
-- ![Silver Ingot](/media/mods/techreborn/silver_ingot.png){width="24" query="?nolink&24"} **[Silver Ingot](/items/ingot/silver_ingot)**
-- ![Steel Ingot](/media/mods/techreborn/steel_ingot.png){width="24" query="?nolink&24"} **[Steel Ingot](/items/ingot/steel_ingot)**
-- ![Tin Ingot](/media/mods/techreborn/tin_ingot.png){width="24" query="?nolink&24"} **[Tin Ingot](/items/ingot/tin_ingot)**
-- ![Titanium Ingot](/media/mods/techreborn/titanium_ingot.png){width="24" query="?nolink&24"} **[Titanium Ingot](/items/ingot/titanium_ingot)**
-- ![Tungsten Ingot](/media/mods/techreborn/tungsten_ingot.png){width="24" query="?nolink&24"} **[Tungsten Ingot](/items/ingot/tungsten_ingot)**
-- ![Hot Tungstensteel Ingot](/media/mods/techreborn/hot_tungstensteel_ingot.png){width="24" query="?nolink&24"} **[Hot Tungstensteel Ingot](/items/ingot/hot_tungstensteel_ingot)**
-- ![Tungstensteel Ingot](/media/mods/techreborn/tungstensteel_ingot.png){width="24" query="?nolink&24"} **[Tungstensteel Ingot](/items/ingot/tungstensteel_ingot)**
-- ![Zinc Ingot](/media/mods/techreborn/zinc_ingot.png){width="24" query="?nolink&24"} **[Zinc Ingot](/items/ingot/zinc_ingot)**
-- ![Refined Iron Ingot](/media/mods/techreborn/refined_iron_ingot.png){width="24" query="?nolink&24"} **[Refined Iron Ingot](/items/ingot/refined_iron_ingot)**
-- ![Advanced Alloy Ingot](/media/mods/techreborn/advanced_alloy_ingot.png){width="24" query="?nolink&24"} **[Advanced Alloy Ingot](/items/ingot/advanced_alloy_ingot)**
-- ![Iridium Alloy Ingot](/media/mods/techreborn/iridium_alloy_ingot.png){width="24" query="?nolink&24"} **[Iridium Alloy Ingot](/items/ingot/iridium_alloy_ingot)**
-```
+<McItem imgSlug="aluminium_ingot" linkPath="items/ingots/aluminium_ingot" friendlyName="Aluminium Ingot" pack="techreborn"/> 
+
+<McItem imgSlug="brass_ingot" linkPath="items/ingots/brass_ingot" friendlyName="Brass Ingot" pack="techreborn"/> 
+
+<McItem imgSlug="bronze_ingot" linkPath="items/ingots/bronze_ingot" friendlyName="Bronze Ingot" pack="techreborn"/> 
+
+<McItem imgSlug="chrome_ingot" linkPath="items/ingots/chrome_ingot" friendlyName="Chrome Ingot" pack="techreborn"/> 
+
+<McItem imgSlug="electrum_ingot" linkPath="items/ingots/electrum_ingot" friendlyName="Electrum Ingot" pack="techreborn"/> 
+
+<McItem imgSlug="invar_ingot" linkPath="items/ingots/invar_ingot" friendlyName="Invar Ingot" pack="techreborn"/> 
+
+<McItem imgSlug="iridium_ingot" linkPath="items/ingots/iridium_ingot" friendlyName="Iridium Ingot" pack="techreborn"/> 
+
+<McItem imgSlug="lead_ingot" linkPath="items/ingots/lead_ingot" friendlyName="Lead Ingot" pack="techreborn"/> 
+
+<McItem imgSlug="nickel_ingot" linkPath="items/ingots/nickel_ingot" friendlyName="Nickel Ingot" pack="techreborn"/> 
+
+<McItem imgSlug="platinum_ingot" linkPath="items/ingots/platinum_ingot" friendlyName="Platinum Ingot" pack="techreborn"/> 
+
+<McItem imgSlug="silver_ingot" linkPath="items/ingots/silver_ingot" friendlyName="Silver Ingot" pack="techreborn"/> 
+
+<McItem imgSlug="steel_ingot" linkPath="items/ingots/steel_ingot" friendlyName="Steel Ingot" pack="techreborn"/> 
+
+<McItem imgSlug="tin_ingot" linkPath="items/ingots/tin_ingot" friendlyName="Tin Ingot" pack="techreborn"/> 
+
+<McItem imgSlug="titanium_ingot" linkPath="items/ingots/titanium_ingot" friendlyName="Titanium Ingot" pack="techreborn"/> 
+
+<McItem imgSlug="tungsten_ingot" linkPath="items/ingots/tungsten_ingot" friendlyName="Tungsten Ingot" pack="techreborn"/> 
+
+<McItem imgSlug="hot_tungstensteel_ingot" linkPath="items/ingots/hot_tungstensteel_ingot" friendlyName="Hot Tungstensteel Ingot" pack="techreborn"/> 
+
+<McItem imgSlug="tungstensteel_ingot" linkPath="items/ingots/tungstensteel_ingot" friendlyName="Tungstensteel Ingot" pack="techreborn"/> 
+
+<McItem imgSlug="zinc_ingot" linkPath="items/ingots/zinc_ingot" friendlyName="Zinc Ingot" pack="techreborn"/> 
+
+<McItem imgSlug="refined_iron_ingot" linkPath="items/ingots/refined_iron_ingot" friendlyName="Refined Iron Ingot" pack="techreborn"/> 
+
+<McItem imgSlug="advanced_alloy_ingot" linkPath="items/ingots/advanced_alloy_ingot" friendlyName="Advanced Alloy Ingot" pack="techreborn"/> 
+
+<McItem imgSlug="iridium_alloy_ingot" linkPath="items/ingots/iridium_alloy_ingot" friendlyName="Iridium Alloy Ingot" pack="techreborn"/> 
+
+
