--- a/docs/items/dusts/dusts.mdx
+++ b/docs/items/dusts/dusts.mdx
@@ -7,65 +7,65 @@ title: Dusts
 
 # Dusts
 
-Dusts are created mainly by grinding **[ores](/world_generation/ore)** or another materials in the \<mcitem\>techreborn:grinder\</mcitem\> 
+Dusts are created mainly by grinding ores or another materials in the \<mcitem\>techreborn:grinder\</mcitem\> 
 or \<mcitem\>techreborn:industrial_grinder\</mcitem\>
 
-- \<mcitem\>techreborn:almandine_dust\</mcitem\>
-- \<mcitem\>techreborn:aluminium_dust\</mcitem\>
-- \<mcitem\>techreborn:amethyst_dust\</mcitem\>
-- \<mcitem\>techreborn:andesite_dust\</mcitem\>
-- \<mcitem\>techreborn:andradite_dust\</mcitem\>
-- \<mcitem\>techreborn:ashes\</mcitem\>
-- \<mcitem\>techreborn:basalt_dust\</mcitem\>
-- \<mcitem\>techreborn:bauxite_dust\</mcitem\>
-- \<mcitem\>techreborn:brass_dust\</mcitem\>
-- \<mcitem\>techreborn:bronze_dust\</mcitem\>
-- \<mcitem\>techreborn:calcite_dust\</mcitem\>
-- \<mcitem\>techreborn:charcoal_dust\</mcitem\>
-- \<mcitem\>techreborn:chrome_dust\</mcitem\>
-- \<mcitem\>techreborn:cinnabar_dust\</mcitem\>
-- \<mcitem\>techreborn:clay_dust\</mcitem\>
-- \<mcitem\>techreborn:coal_dust\</mcitem\>
-- \<mcitem\>techreborn:dark_ashes_dust\</mcitem\>
-- \<mcitem\>techreborn:diamond_dust\</mcitem\>
-- \<mcitem\>techreborn:diorite_dust\</mcitem\>
-- \<mcitem\>techreborn:electrum_dust\</mcitem\>
-- \<mcitem\>techreborn:emerald_dust\</mcitem\>
-- \<mcitem\>techreborn:ender_eye_dust\</mcitem\>
-- \<mcitem\>techreborn:ender_pearl_dust\</mcitem\>
-- \<mcitem\>techreborn:endstone_dust\</mcitem\>
-- \<mcitem\>techreborn:flint_dust\</mcitem\>
-- \<mcitem\>techreborn:galena_dust\</mcitem\>
-- \<mcitem\>techreborn:granite_dust\</mcitem\>
-- \<mcitem\>techreborn:grossular_dust\</mcitem\>
-- \<mcitem\>techreborn:invar_dust\</mcitem\>
-- \<mcitem\>techreborn:lazurite_dust\</mcitem\>
-- \<mcitem\>techreborn:lead_dust\</mcitem\>
-- \<mcitem\>techreborn:magnesium_dust\</mcitem\>
-- \<mcitem\>techreborn:manganese_dust\</mcitem\>
-- \<mcitem\>techreborn:marble_dust\</mcitem\>
-- \<mcitem\>techreborn:netherrack_dust\</mcitem\>
-- \<mcitem\>techreborn:nickel_dust\</mcitem\>
-- \<mcitem\>techreborn:obsidian_dust\</mcitem\>
-- \<mcitem\>techreborn:peridot_dust\</mcitem\>
-- \<mcitem\>techreborn:phosphorous_dust\</mcitem\>
-- \<mcitem\>techreborn:platinum_dust\</mcitem\>
-- \<mcitem\>techreborn:pyrite_dust\</mcitem\>
-- \<mcitem\>techreborn:pyrope_dust\</mcitem\>
-- \<mcitem\>techreborn:red_garnet_dust\</mcitem\>
-- \<mcitem\>techreborn:ruby_dust\</mcitem\>
-- \<mcitem\>techreborn:saltpeter_dust\</mcitem\>
-- \<mcitem\>techreborn:sapphire_dust\</mcitem\>
-- \<mcitem\>techreborn:saw_dust\</mcitem\>
-- \<mcitem\>techreborn:silver_dust\</mcitem\>
-- \<mcitem\>techreborn:sodalite_dust\</mcitem\>
-- \<mcitem\>techreborn:spessartine_dust\</mcitem\>
-- \<mcitem\>techreborn:sphalerite_dust\</mcitem\>
-- \<mcitem\>techreborn:steel_dust\</mcitem\>
-- \<mcitem\>techreborn:sulfur_dust\</mcitem\>
-- \<mcitem\>techreborn:tin_dust\</mcitem\>
-- \<mcitem\>techreborn:titanium_dust\</mcitem\>
-- \<mcitem\>techreborn:tungsten_dust\</mcitem\>
-- \<mcitem\>techreborn:uvarovite_dust\</mcitem\>
-- \<mcitem\>techreborn:yellow_garnet_dust\</mcitem\>
-- \<mcitem\>techreborn:zinc_dust\</mcitem\>
+<McItem slug="almandine_dust" friendlyName="Almandine Dust" pack="techreborn"/>
+<McItem slug="aluminium_dust" friendlyName="Aluminium Dust" pack="techreborn"/>
+<McItem slug="amethyst_dust" friendlyName="Amethyst Dust" pack="techreborn" overrides={{ image: true }} />
+<McItem slug="andesite_dust" friendlyName="Andesite Dust" pack="techreborn"/>
+<McItem slug="andradite_dust" friendlyName="Andradite Dust" pack="techreborn"/>
+<McItem slug="ashes" friendlyName="Ashes" pack="techreborn"/>
+<McItem slug="basalt_dust" friendlyName="Basalt Dust" pack="techreborn"/>
+<McItem slug="bauxite_dust" friendlyName="Bauxite Dust" pack="techreborn"/>
+<McItem slug="brass_dust" friendlyName="Brass Dust" pack="techreborn"/>
+<McItem slug="bronze_dust" friendlyName="Bronze Dust" pack="techreborn"/>
+<McItem slug="calcite_dust" friendlyName="Calcite Dust" pack="techreborn"/>
+<McItem slug="charcoal_dust" friendlyName="Charcoal Dust" pack="techreborn"/>
+<McItem slug="chrome_dust" friendlyName="Chrome Dust" pack="techreborn"/>
+<McItem slug="cinnabar_dust" friendlyName="Cinnabar Dust" pack="techreborn"/>
+<McItem slug="clay_dust" friendlyName="Clay Dust" pack="techreborn"/>
+<McItem slug="coal_dust" friendlyName="Coal Dust" pack="techreborn"/>
+<McItem slug="dark_ashes_dust" friendlyName="Dark Ashes Dust" pack="techreborn"/>
+<McItem slug="diamond_dust" friendlyName="Diamond Dust" pack="techreborn"/>
+<McItem slug="diorite_dust" friendlyName="Diorite Dust" pack="techreborn"/>
+<McItem slug="electrum_dust" friendlyName="Electrum Dust" pack="techreborn"/>
+<McItem slug="emerald_dust" friendlyName="Emerald Dust" pack="techreborn"/>
+<McItem slug="ender_eye_dust" friendlyName="Ender Eye Dust" pack="techreborn"/>
+<McItem slug="ender_pearl_dust" friendlyName="Ender Pearl Dust" pack="techreborn"/>
+<McItem slug="endstone_dust" friendlyName="Endstone Dust" pack="techreborn"/>
+<McItem slug="flint_dust" friendlyName="Flint Dust" pack="techreborn"/>
+<McItem slug="galena_dust" friendlyName="Galena Dust" pack="techreborn"/>
+<McItem slug="granite_dust" friendlyName="Granite Dust" pack="techreborn"/>
+<McItem slug="grossular_dust" friendlyName="Grossular Dust" pack="techreborn"/>
+<McItem slug="invar_dust" friendlyName="Invar Dust" pack="techreborn"/>
+<McItem slug="lazurite_dust" friendlyName="Lazurite Dust" pack="techreborn"/>
+<McItem slug="lead_dust" friendlyName="Lead Dust" pack="techreborn"/>
+<McItem slug="magnesium_dust" friendlyName="Magnesium Dust" pack="techreborn"/>
+<McItem slug="manganese_dust" friendlyName="Manganese Dust" pack="techreborn"/>
+<McItem slug="marble_dust" friendlyName="Marble Dust" pack="techreborn"/>
+<McItem slug="netherrack_dust" friendlyName="Netherrack Dust" pack="techreborn"/>
+<McItem slug="nickel_dust" friendlyName="Nickel Dust" pack="techreborn"/>
+<McItem slug="obsidian_dust" friendlyName="Obsidian Dust" pack="techreborn"/>
+<McItem slug="peridot_dust" friendlyName="Peridot Dust" pack="techreborn"/>
+<McItem slug="phosphorous_dust" friendlyName="Phosphorous Dust" pack="techreborn"/>
+<McItem slug="platinum_dust" friendlyName="Platinum Dust" pack="techreborn"/>
+<McItem slug="pyrite_dust" friendlyName="Pyrite Dust" pack="techreborn"/>
+<McItem slug="pyrope_dust" friendlyName="Pyrope Dust" pack="techreborn"/>
+<McItem slug="red_garnet_dust" friendlyName="Red Garnet Dust" pack="techreborn"/>
+<McItem slug="ruby_dust" friendlyName="Ruby Dust" pack="techreborn"/>
+<McItem slug="saltpeter_dust" friendlyName="Saltpeter Dust" pack="techreborn"/>
+<McItem slug="sapphire_dust" friendlyName="Sapphire Dust" pack="techreborn"/>
+<McItem slug="saw_dust" friendlyName="Saw Dust" pack="techreborn"/>
+<McItem slug="silver_dust" friendlyName="Silver Dust" pack="techreborn"/>
+<McItem slug="sodalite_dust" friendlyName="Sodalite Dust" pack="techreborn"/>
+<McItem slug="spessartine_dust" friendlyName="Spessartine Dust" pack="techreborn"/>
+<McItem slug="sphalerite_dust" friendlyName="Sphalerite Dust" pack="techreborn"/>
+<McItem slug="steel_dust" friendlyName="Steel Dust" pack="techreborn"/>
+<McItem slug="sulfur_dust" friendlyName="Sulfur Dust" pack="techreborn"/>
+<McItem slug="tin_dust" friendlyName="Tin Dust" pack="techreborn"/>
+<McItem slug="titanium_dust" friendlyName="Titanium Dust" pack="techreborn"/>
+<McItem slug="tungsten_dust" friendlyName="Tungsten Dust" pack="techreborn"/>
+<McItem slug="uvarovite_dust" friendlyName="Uvarovite Dust" pack="techreborn"/>
+<McItem slug="yellow_garnet_dust" friendlyName="Yellow Garnet Dust" pack="techreborn"/>
+<McItem slug="zinc_dust" friendlyName="Zinc Dust" pack="techreborn"/>
