changing parameter structure for mcitem
ultimately we were going to need to map from slugs to full links, so i did some digging and found where docusaurus is already building that map and leveraged that to build a kind of hacky slug searcher

--- a/docs/items/ingots/ingots.mdx
+++ b/docs/items/ingots/ingots.mdx
@@ -7,46 +7,27 @@ title: Ingots
 
 Ingots are made from Ores.
 
-<McItem imgSlug="aluminium_ingot" linkPath="items/ingots/aluminium_ingot" friendlyName="Aluminium Ingot" pack="techreborn"/> 
+<McItem slug="aluminium_ingot" friendlyName="Aluminium Ingot" pack="techreborn"/> 
+<McItem slug="brass_ingot" friendlyName="Brass Ingot" pack="techreborn"/> 
+<McItem slug="bronze_ingot" friendlyName="Bronze Ingot" pack="techreborn"/> 
+<McItem slug="chrome_ingot" friendlyName="Chrome Ingot" pack="techreborn"/> 
+<McItem slug="electrum_ingot" friendlyName="Electrum Ingot" pack="techreborn"/> 
+<McItem slug="invar_ingot" friendlyName="Invar Ingot" pack="techreborn"/> 
+<McItem slug="iridium_ingot" friendlyName="Iridium Ingot" pack="techreborn"/> 
+<McItem slug="lead_ingot" friendlyName="Lead Ingot" pack="techreborn"/> 
+<McItem slug="nickel_ingot" friendlyName="Nickel Ingot" pack="techreborn"/> 
+<McItem slug="platinum_ingot" friendlyName="Platinum Ingot" pack="techreborn"/> 
+<McItem slug="silver_ingot" friendlyName="Silver Ingot" pack="techreborn"/> 
+<McItem slug="steel_ingot" friendlyName="Steel Ingot" pack="techreborn"/> 
+<McItem slug="tin_ingot" friendlyName="Tin Ingot" pack="techreborn"/> 
+<McItem slug="titanium_ingot" friendlyName="Titanium Ingot" pack="techreborn"/> 
+<McItem slug="tungsten_ingot" friendlyName="Tungsten Ingot" pack="techreborn"/> 
+<McItem slug="hot_tungstensteel_ingot" friendlyName="Hot Tungstensteel Ingot" pack="techreborn"/> 
+<McItem slug="tungstensteel_ingot" friendlyName="Tungstensteel Ingot" pack="techreborn"/> 
+<McItem slug="zinc_ingot" friendlyName="Zinc Ingot" pack="techreborn"/> 
+<McItem slug="refined_iron_ingot" friendlyName="Refined Iron Ingot" pack="techreborn"/> 
+<McItem slug="advanced_alloy_ingot" friendlyName="Advanced Alloy Ingot" pack="techreborn"/> 
+<McItem slug="iridium_alloy_ingot" friendlyName="Iridium Alloy Ingot" pack="techreborn"/> 
 
-<McItem imgSlug="brass_ingot" linkPath="items/ingots/brass_ingot" friendlyName="Brass Ingot" pack="techreborn"/> 
-
-<McItem imgSlug="bronze_ingot" linkPath="items/ingots/bronze_ingot" friendlyName="Bronze Ingot" pack="techreborn"/> 
-
-<McItem imgSlug="chrome_ingot" linkPath="items/ingots/chrome_ingot" friendlyName="Chrome Ingot" pack="techreborn"/> 
-
-<McItem imgSlug="electrum_ingot" linkPath="items/ingots/electrum_ingot" friendlyName="Electrum Ingot" pack="techreborn"/> 
-
-<McItem imgSlug="invar_ingot" linkPath="items/ingots/invar_ingot" friendlyName="Invar Ingot" pack="techreborn"/> 
-
-<McItem imgSlug="iridium_ingot" linkPath="items/ingots/iridium_ingot" friendlyName="Iridium Ingot" pack="techreborn"/> 
-
-<McItem imgSlug="lead_ingot" linkPath="items/ingots/lead_ingot" friendlyName="Lead Ingot" pack="techreborn"/> 
-
-<McItem imgSlug="nickel_ingot" linkPath="items/ingots/nickel_ingot" friendlyName="Nickel Ingot" pack="techreborn"/> 
-
-<McItem imgSlug="platinum_ingot" linkPath="items/ingots/platinum_ingot" friendlyName="Platinum Ingot" pack="techreborn"/> 
-
-<McItem imgSlug="silver_ingot" linkPath="items/ingots/silver_ingot" friendlyName="Silver Ingot" pack="techreborn"/> 
-
-<McItem imgSlug="steel_ingot" linkPath="items/ingots/steel_ingot" friendlyName="Steel Ingot" pack="techreborn"/> 
-
-<McItem imgSlug="tin_ingot" linkPath="items/ingots/tin_ingot" friendlyName="Tin Ingot" pack="techreborn"/> 
-
-<McItem imgSlug="titanium_ingot" linkPath="items/ingots/titanium_ingot" friendlyName="Titanium Ingot" pack="techreborn"/> 
-
-<McItem imgSlug="tungsten_ingot" linkPath="items/ingots/tungsten_ingot" friendlyName="Tungsten Ingot" pack="techreborn"/> 
-
-<McItem imgSlug="hot_tungstensteel_ingot" linkPath="items/ingots/hot_tungstensteel_ingot" friendlyName="Hot Tungstensteel Ingot" pack="techreborn"/> 
-
-<McItem imgSlug="tungstensteel_ingot" linkPath="items/ingots/tungstensteel_ingot" friendlyName="Tungstensteel Ingot" pack="techreborn"/> 
-
-<McItem imgSlug="zinc_ingot" linkPath="items/ingots/zinc_ingot" friendlyName="Zinc Ingot" pack="techreborn"/> 
-
-<McItem imgSlug="refined_iron_ingot" linkPath="items/ingots/refined_iron_ingot" friendlyName="Refined Iron Ingot" pack="techreborn"/> 
-
-<McItem imgSlug="advanced_alloy_ingot" linkPath="items/ingots/advanced_alloy_ingot" friendlyName="Advanced Alloy Ingot" pack="techreborn"/> 
-
-<McItem imgSlug="iridium_alloy_ingot" linkPath="items/ingots/iridium_alloy_ingot" friendlyName="Iridium Alloy Ingot" pack="techreborn"/> 
 
 
