creating nugget listing and stubs

--- a/docs/items/nuggets/nuggets.mdx
+++ b/docs/items/nuggets/nuggets.mdx
@@ -5,25 +5,28 @@ title: Nuggets
 
 <ItemImage file="aluminium_nugget" alt="Nuggets" size="200" />
 
-- \<mcitem\>techreborn:aluminium_nugget\</mcitem\>
-- \<mcitem\>techreborn:brass_nugget\</mcitem\>
-- \<mcitem\>techreborn:bronze_nugget\</mcitem\>
-- \<mcitem\>techreborn:chrome_nugget\</mcitem\>
-- \<mcitem\>techreborn:copper_nugget\</mcitem\>
-- \<mcitem\>techreborn:diamond_nugget\</mcitem\>
-- \<mcitem\>techreborn:electrum_nugget\</mcitem\>
-- \<mcitem\>techreborn:invar_nugget\</mcitem\>
-- \<mcitem\>techreborn:iridium_nugget\</mcitem\>
-- \<mcitem\>techreborn:iron_nugget\</mcitem\>
-- \<mcitem\>techreborn:lead_nugget\</mcitem\>
-- \<mcitem\>techreborn:nickel_nugget\</mcitem\>
-- \<mcitem\>techreborn:platinum_nugget\</mcitem\>
-- \<mcitem\>techreborn:refined_iron_nugget\</mcitem\>
-- \<mcitem\>techreborn:silver_nugget\</mcitem\>
-- \<mcitem\>techreborn:steel_nugget\</mcitem\>
-- \<mcitem\>techreborn:tin_nugget\</mcitem\>
-- \<mcitem\>techreborn:titanium_nugget\</mcitem\>
-- \<mcitem\>techreborn:tungsten_nugget\</mcitem\>
-- \<mcitem\>techreborn:hot_tungstensteel_nugget\</mcitem\>
-- \<mcitem\>techreborn:tungstensteel_nugget\</mcitem\>
-- \<mcitem\>techreborn:zinc_nugget\</mcitem\>
+
+<McItem slug="aluminium_nugget" friendlyName="Aluminium Nugget" pack="techreborn"/> 
+<McItem slug="brass_nugget" friendlyName="Brass Nugget" pack="techreborn"/> 
+<McItem slug="bronze_nugget" friendlyName="Bronze Nugget" pack="techreborn"/> 
+<McItem slug="chrome_nugget" friendlyName="Chrome Nugget" pack="techreborn"/> 
+<McItem slug="copper_nugget" friendlyName="Copper Nugget" pack="techreborn"/> 
+<McItem slug="diamond_nugget" friendlyName="Diamond Nugget" pack="techreborn"/> 
+<McItem slug="electrum_nugget" friendlyName="Electrum Nugget" pack="techreborn"/> 
+<McItem slug="invar_nugget" friendlyName="Invar Nugget" pack="techreborn"/> 
+<McItem slug="iridium_nugget" friendlyName="Iridium Nugget" pack="techreborn"/> 
+<McItem slug="iron_nugget" friendlyName="Iron Nugget" pack="techreborn"/> 
+<McItem slug="lead_nugget" friendlyName="Lead Nugget" pack="techreborn"/> 
+<McItem slug="nickel_nugget" friendlyName="Nickel Nugget" pack="techreborn"/> 
+<McItem slug="platinum_nugget" friendlyName="Platinum Nugget" pack="techreborn"/> 
+<McItem slug="refined_iron_nugget" friendlyName="Refined Iron Nugget" pack="techreborn"/> 
+<McItem slug="silver_nugget" friendlyName="Silver Nugget" pack="techreborn"/> 
+<McItem slug="steel_nugget" friendlyName="Steel Nugget" pack="techreborn"/> 
+<McItem slug="tin_nugget" friendlyName="Tin Nugget" pack="techreborn"/> 
+<McItem slug="titanium_nugget" friendlyName="Titanium Nugget" pack="techreborn"/> 
+<McItem slug="tungsten_nugget" friendlyName="Tungsten Nugget" pack="techreborn"/> 
+<McItem slug="hot_tungstensteel_nugget" friendlyName="Hot Tungstensteel Nugget" pack="techreborn"/> 
+<McItem slug="tungstensteel_nugget" friendlyName="Tungstensteel Nugget" pack="techreborn"/> 
+<McItem slug="zinc_nugget" friendlyName="Zinc Nugget" pack="techreborn"/> 
+
+
