--- a/docs/items/ingots/ingots.mdx
+++ b/docs/items/ingots/ingots.mdx
@@ -7,27 +7,27 @@ title: Ingots
 
 Ingots are made from Ores.
 
-<McItem slug="aluminium_ingot" friendlyName="Aluminium Ingot" pack="techreborn"/> 
-<McItem slug="brass_ingot" friendlyName="Brass Ingot" pack="techreborn"/> 
-<McItem slug="bronze_ingot" friendlyName="Bronze Ingot" pack="techreborn"/> 
-<McItem slug="chrome_ingot" friendlyName="Chrome Ingot" pack="techreborn"/> 
-<McItem slug="electrum_ingot" friendlyName="Electrum Ingot" pack="techreborn"/> 
-<McItem slug="invar_ingot" friendlyName="Invar Ingot" pack="techreborn"/> 
-<McItem slug="iridium_ingot" friendlyName="Iridium Ingot" pack="techreborn"/> 
-<McItem slug="lead_ingot" friendlyName="Lead Ingot" pack="techreborn"/> 
-<McItem slug="nickel_ingot" friendlyName="Nickel Ingot" pack="techreborn"/> 
-<McItem slug="platinum_ingot" friendlyName="Platinum Ingot" pack="techreborn"/> 
-<McItem slug="silver_ingot" friendlyName="Silver Ingot" pack="techreborn"/> 
-<McItem slug="steel_ingot" friendlyName="Steel Ingot" pack="techreborn"/> 
-<McItem slug="tin_ingot" friendlyName="Tin Ingot" pack="techreborn"/> 
-<McItem slug="titanium_ingot" friendlyName="Titanium Ingot" pack="techreborn"/> 
-<McItem slug="tungsten_ingot" friendlyName="Tungsten Ingot" pack="techreborn"/> 
-<McItem slug="hot_tungstensteel_ingot" friendlyName="Hot Tungstensteel Ingot" pack="techreborn"/> 
-<McItem slug="tungstensteel_ingot" friendlyName="Tungstensteel Ingot" pack="techreborn"/> 
-<McItem slug="zinc_ingot" friendlyName="Zinc Ingot" pack="techreborn"/> 
-<McItem slug="refined_iron_ingot" friendlyName="Refined Iron Ingot" pack="techreborn"/> 
-<McItem slug="advanced_alloy_ingot" friendlyName="Advanced Alloy Ingot" pack="techreborn"/> 
-<McItem slug="iridium_alloy_ingot" friendlyName="Iridium Alloy Ingot" pack="techreborn"/> 
+<McItem slug="aluminium_ingot" pack="techreborn"/> 
+<McItem slug="brass_ingot" pack="techreborn"/> 
+<McItem slug="bronze_ingot" pack="techreborn"/> 
+<McItem slug="chrome_ingot" pack="techreborn"/> 
+<McItem slug="electrum_ingot" pack="techreborn"/> 
+<McItem slug="invar_ingot" pack="techreborn"/> 
+<McItem slug="iridium_ingot" pack="techreborn"/> 
+<McItem slug="lead_ingot" pack="techreborn"/> 
+<McItem slug="nickel_ingot" pack="techreborn"/> 
+<McItem slug="platinum_ingot" pack="techreborn"/> 
+<McItem slug="silver_ingot" pack="techreborn"/> 
+<McItem slug="steel_ingot" pack="techreborn"/> 
+<McItem slug="tin_ingot" pack="techreborn"/> 
+<McItem slug="titanium_ingot" pack="techreborn"/> 
+<McItem slug="tungsten_ingot" pack="techreborn"/> 
+<McItem slug="hot_tungstensteel_ingot" pack="techreborn"/> 
+<McItem slug="tungstensteel_ingot" pack="techreborn"/> 
+<McItem slug="zinc_ingot" pack="techreborn"/> 
+<McItem slug="refined_iron_ingot" pack="techreborn"/> 
+<McItem slug="advanced_alloy_ingot" pack="techreborn"/> 
+<McItem slug="iridium_alloy_ingot" pack="techreborn"/> 
 
 
 
