--- a/docs/items/nuggets/nuggets.mdx
+++ b/docs/items/nuggets/nuggets.mdx
@@ -6,27 +6,28 @@ title: Nuggets
 <ItemImage file="aluminium_nugget" alt="Nuggets" size="200" />
 
 
-<McItem slug="aluminium_nugget" friendlyName="Aluminium Nugget" pack="techreborn"/> 
-<McItem slug="brass_nugget" friendlyName="Brass Nugget" pack="techreborn"/> 
-<McItem slug="bronze_nugget" friendlyName="Bronze Nugget" pack="techreborn"/> 
-<McItem slug="chrome_nugget" friendlyName="Chrome Nugget" pack="techreborn"/> 
-<McItem slug="copper_nugget" friendlyName="Copper Nugget" pack="techreborn"/> 
-<McItem slug="diamond_nugget" friendlyName="Diamond Nugget" pack="techreborn"/> 
-<McItem slug="electrum_nugget" friendlyName="Electrum Nugget" pack="techreborn"/> 
-<McItem slug="invar_nugget" friendlyName="Invar Nugget" pack="techreborn"/> 
-<McItem slug="iridium_nugget" friendlyName="Iridium Nugget" pack="techreborn"/> 
-<McItem slug="iron_nugget" friendlyName="Iron Nugget" pack="techreborn"/> 
-<McItem slug="lead_nugget" friendlyName="Lead Nugget" pack="techreborn"/> 
-<McItem slug="nickel_nugget" friendlyName="Nickel Nugget" pack="techreborn"/> 
-<McItem slug="platinum_nugget" friendlyName="Platinum Nugget" pack="techreborn"/> 
-<McItem slug="refined_iron_nugget" friendlyName="Refined Iron Nugget" pack="techreborn"/> 
-<McItem slug="silver_nugget" friendlyName="Silver Nugget" pack="techreborn"/> 
-<McItem slug="steel_nugget" friendlyName="Steel Nugget" pack="techreborn"/> 
-<McItem slug="tin_nugget" friendlyName="Tin Nugget" pack="techreborn"/> 
-<McItem slug="titanium_nugget" friendlyName="Titanium Nugget" pack="techreborn"/> 
-<McItem slug="tungsten_nugget" friendlyName="Tungsten Nugget" pack="techreborn"/> 
-<McItem slug="hot_tungstensteel_nugget" friendlyName="Hot Tungstensteel Nugget" pack="techreborn"/> 
-<McItem slug="tungstensteel_nugget" friendlyName="Tungstensteel Nugget" pack="techreborn"/> 
-<McItem slug="zinc_nugget" friendlyName="Zinc Nugget" pack="techreborn"/> 
+<McItem slug="aluminium_nugget" pack="techreborn"/> 
+<McItem slug="brass_nugget" pack="techreborn"/> 
+<McItem slug="bronze_nugget" pack="techreborn"/> 
+<McItem slug="chrome_nugget" pack="techreborn"/> 
+<McItem slug="copper_nugget" pack="techreborn"/> 
+<McItem slug="diamond_nugget" pack="techreborn"/> 
+<McItem slug="electrum_nugget" pack="techreborn"/> 
+<McItem slug="invar_nugget" pack="techreborn"/> 
+<McItem slug="iridium_nugget" pack="techreborn"/> 
+<McItem slug="iron_nugget" pack="techreborn"/> 
+<McItem slug="lead_nugget" pack="techreborn"/> 
+<McItem slug="nickel_nugget" pack="techreborn"/> 
+<McItem slug="platinum_nugget" pack="techreborn"/> 
+<McItem slug="refined_iron_nugget" pack="techreborn"/> 
+<McItem slug="silver_nugget" pack="techreborn"/> 
+<McItem slug="steel_nugget" pack="techreborn"/> 
+<McItem slug="tin_nugget" pack="techreborn"/> 
+<McItem slug="titanium_nugget" pack="techreborn"/> 
+<McItem slug="tungsten_nugget" pack="techreborn"/> 
+<McItem slug="hot_tungstensteel_nugget" pack="techreborn"/> 
+<McItem slug="tungstensteel_nugget" pack="techreborn"/> 
+<McItem slug="zinc_nugget" pack="techreborn"/> 
+
 
 
