--- a/docs/items/nuggets/iron_nugget.mdx
+++ b/docs/items/nuggets/iron_nugget.mdx
@@ -6,4 +6,4 @@ title: Iron Nugget
 
 Made from a whole ingot.
 
-<CraftingTable recipe="input techreborn:iron_nugget techreborn:iron_nugget techreborn:iron_nugget input techreborn:iron_nugget techreborn:iron_nugget techreborn:iron_nugget input techreborn:iron_nugget techreborn:iron_nugget techreborn:iron_nugget output techreborn:iron_ingot" />
+<CraftingTable recipe="input techreborn:iron_nugget techreborn:iron_nugget techreborn:iron_nugget input techreborn:iron_nugget techreborn:iron_nugget techreborn:iron_nugget input techreborn:iron_nugget techreborn:iron_nugget techreborn:iron_nugget output minecraft:iron_ingot" />
