converting fluids section with stubs
some even have content!

--- a/docs/items/fluids/beryllium_cell.mdx
+++ b/docs/items/fluids/beryllium_cell.mdx
@@ -19,7 +19,9 @@ The **Beryllium Cell** is a fluid cell added by TechReborn. You can get by using
 
 ## Usage
 
-**Beryllium Cell** used in the following crafting recipe: \<recipe\> input air techreborn:neutron_reflector air input techreborn:neutron_reflector techreborn:beryllium_cell techreborn:neutron_reflector input air techreborn:neutron_reflector air output techreborn:thick_neutron_reflector \</recipe\>
+**Beryllium Cell** used in the following crafting recipe: 
+
+<CraftingTable recipe="input air techreborn:neutron_reflector air input techreborn:neutron_reflector techreborn:beryllium_cell techreborn:neutron_reflector input air techreborn:neutron_reflector air output techreborn:thick_neutron_reflector" />
 
 \
 **Beryllium Cell** used in the following \<mcitem\>techreborn:fusion_reactor\</mcitem\> recipe:\
