--- a/docs/items/fluids/fluids.mdx
+++ b/docs/items/fluids/fluids.mdx
@@ -11,29 +11,28 @@ title: Fluids
 
 ### List of fluids
 
-- \<mcitem\>techreborn:empty_cell\</mcitem\>
-- \<mcitem\>techreborn:beryllium_cell\</mcitem\>
-- \<mcitem\>techreborn:calcium_cell\</mcitem\>
-- \<mcitem\>techreborn:calciumcarbonate_cell\</mcitem\>
-- \<mcitem\>techreborn:carbon_cell\</mcitem\>
-- \<mcitem\>techreborn:carbon_fiber_cell\</mcitem\>
-- \<mcitem\>techreborn:chlorite_cell\</mcitem\>
-- \<mcitem\>techreborn:compressed_air_cell\</mcitem\>
-- \<mcitem\>techreborn:diesel_cell\</mcitem\>
-- \<mcitem\>techreborn:electrolyzed_water_cell\</mcitem\>
-- \<mcitem\>techreborn:hydrogen_cell\</mcitem\>
-- \<mcitem\>techreborn:lithium_cell\</mcitem\>
-- \<mcitem\>techreborn:methane_cell\</mcitem\>
-- \<mcitem\>techreborn:mercury_cell\</mcitem\>
-- \<mcitem\>techreborn:nitrocarbon_cell\</mcitem\>
-- \<mcitem\>techreborn:nitrodiesel_cell\</mcitem\>
-- \<mcitem\>techreborn:silicon_cell\</mcitem\>
-- \<mcitem\>techreborn:sodium_cell\</mcitem\>
-- \<mcitem\>techreborn:sodiumpersulfate_cell\</mcitem\>
-- \<mcitem\>techreborn:sodium_sulfide_cell\</mcitem\>
-- \<mcitem\>techreborn:sulfur_cell\</mcitem\>
-- \<mcitem\>techreborn:sulfuric_acid_cell\</mcitem\>
-- \<mcitem\>techreborn:water_cell\</mcitem\>
-- \<mcitem\>techreborn:wolframium_cell\</mcitem\>
-
+<McItem slug="empty_cell" pack="techreborn"/>
+<McItem slug="beryllium_cell" pack="techreborn"/>
+<McItem slug="calcium_cell" pack="techreborn"/>
+<McItem slug="calciumcarbonate_cell" pack="techreborn"/>
+<McItem slug="carbon_cell" pack="techreborn"/>
+<McItem slug="carbon_fiber_cell" pack="techreborn"/>
+<McItem slug="chlorite_cell" pack="techreborn"/>
+<McItem slug="compressed_air_cell" pack="techreborn"/>
+<McItem slug="diesel_cell" pack="techreborn"/>
+<McItem slug="electrolyzed_water_cell" pack="techreborn"/>
+<McItem slug="hydrogen_cell" pack="techreborn"/>
+<McItem slug="lithium_cell" pack="techreborn"/>
+<McItem slug="methane_cell" pack="techreborn"/>
+<McItem slug="mercury_cell" pack="techreborn"/>
+<McItem slug="nitrocarbon_cell" pack="techreborn"/>
+<McItem slug="nitrodiesel_cell" pack="techreborn"/>
+<McItem slug="silicon_cell" pack="techreborn"/>
+<McItem slug="sodium_cell" pack="techreborn"/>
+<McItem slug="sodiumpersulfate_cell" pack="techreborn"/>
+<McItem slug="sodium_sulfide_cell" pack="techreborn"/>
+<McItem slug="sulfur_cell" pack="techreborn"/>
+<McItem slug="sulfuric_acid_cell" pack="techreborn"/>
+<McItem slug="water_cell" pack="techreborn"/>
+<McItem slug="wolframium_cell" pack="techreborn"/>
 
