--- a/docs/items/dusts/dusts.mdx
+++ b/docs/items/dusts/dusts.mdx
@@ -7,8 +7,8 @@ title: Dusts
 
 # Dusts
 
-Dusts are created mainly by grinding ores or another materials in the \<mcitem\>techreborn:grinder\</mcitem\> 
-or \<mcitem\>techreborn:industrial_grinder\</mcitem\>
+Dusts are created mainly by grinding ores or another materials in the <McItem slug="techreborn:grinder" inline={true}/>
+or <McItem slug="techreborn:industrial_grinder" inline={true}/>
 
 <McItem slug="almandine_dust" pack="techreborn"/>
 <McItem slug="aluminium_dust" pack="techreborn"/>
