improved battery index and children with new item and crafting recipe components

--- a/docs/items/batteries/batteries.mdx
+++ b/docs/items/batteries/batteries.mdx
@@ -5,11 +5,11 @@ sidebar_position: 3
 
 Portable batteries are used to store energy, and to power tools and armors from the inventory.
 
-- \<mcitem\>techreborn:red_cell_battery\</mcitem\>
-- \<mcitem\>techreborn:lithium_ion_battery\</mcitem\>
-- \<mcitem\>techreborn:energy_crystal\</mcitem\>
-- \<mcitem\>techreborn:lapotron_crystal\</mcitem\>
-- \<mcitem\>techreborn:lapotronic_energy_orb\</mcitem\>
+<McItem slug="techreborn:red_cell_battery"/>
+<McItem slug="techreborn:lithium_ion_battery"/>
+<McItem slug="techreborn:energy_crystal"/>
+<McItem slug="techreborn:lapotron_crystal"/>
+<McItem slug="techreborn:lapotronic_energy_orb"/>
 
 ## Usage Notes
 
