--- a/docs/items/batteries/energy_crystal.mdx
+++ b/docs/items/batteries/energy_crystal.mdx
@@ -21,11 +21,11 @@ Made in Assembling Machine.
 
 **Energy Crystals** are used as crafting ingredient in the following crafting recipes:
 
-- \<mcitem\>techreborn:lapotron_crystal\</mcitem\>
-- \<mcitem\>techreborn:adjustable_su\</mcitem\>
-- \<mcitem\>techreborn:charge_o_mat\</mcitem\>
-- \<mcitem\>techreborn:fusion_control_computer\</mcitem\>
-- \<mcitem\>techreborn:MFE\</mcitem\>
+- <McItem slug="techreborn:lapotron_crystal"/>
+- <McItem slug="techreborn:adjustable_su"/>
+- <McItem slug="techreborn:charge_o_mat"/>
+- <McItem slug="techreborn:fusion_control_computer"/>
+- <McItem slug="techreborn:MFE"/>
 
 ## History
 
