--- a/docs/items/batteries/lapotronic_energy_orb.mdx
+++ b/docs/items/batteries/lapotronic_energy_orb.mdx
@@ -17,15 +17,15 @@ The **Lapotronic Energy Orb** is a portable battery used to charge items. For mo
 
 ## Recipe
 
-\<recipe\> input techreborn:lapotron_crystal techreborn:lapotron_crystal techreborn:lapotron_crystal input techreborn:lapotron_crystal techreborn:iridium_alloy_plate techreborn:lapotron_crystal input techreborn:lapotron_crystal techreborn:lapotron_crystal techreborn:lapotron_crystal output techreborn:lapotronic_energy_orb \</recipe\>
+<CraftingTable recipe="input techreborn:lapotron_crystal techreborn:lapotron_crystal techreborn:lapotron_crystal input techreborn:lapotron_crystal techreborn:iridium_alloy_plate techreborn:lapotron_crystal input techreborn:lapotron_crystal techreborn:lapotron_crystal techreborn:lapotron_crystal output techreborn:lapotronic_energy_orb" />
 
 ## Usage
 
-Used as an ingredient in the \<mcitem\>minecraft:crafting_table\</mcitem\> to produce:
+Used as an ingredient in the <McItem slug="minecraft:crafting_table"/> to produce:
 
-- \<mcitem\>techreborn:cloaking_device\</mcitem\>
-- \<mcitem\>techreborn:lapotronic_orbpack\</mcitem\>
-- \<mcitem\>techreborn:AESU\</mcitem\>
-- \<mcitem\>techreborn:charge_o_mat\</mcitem\>
-- \<mcitem\>techreborn:dragon_egg_energy_siphon\</mcitem\>
-- \<mcitem\>techreborn:matter_fabricator\</mcitem\>
+- <McItem slug="techreborn:cloaking_device"/>
+- <McItem slug="techreborn:lapotronic_orbpack"/>
+- <McItem slug="techreborn:AESU"/>
+- <McItem slug="techreborn:charge_o_mat"/>
+- <McItem slug="techreborn:dragon_egg_energy_siphon"/>
+- <McItem slug="techreborn:matter_fabricator"/>
