--- a/docs/items/batteries/lithium_ion_battery.mdx
+++ b/docs/items/batteries/lithium_ion_battery.mdx
@@ -26,9 +26,9 @@ The **Lithium-Ion Battery** is a portable battery used to charge items. For more
 
 ## Usage
 
-Used as an ingredient in the \<mcitem\>minecraft:crafting_table\</mcitem\> to produce:
+Used as an ingredient in the <McItem slug="minecraft:crafting_table"/> to produce:
 
-- \<mcitem\>techreborn:lithium_ion_batpack\</mcitem\>
-- \<mcitem\>techreborn:advanced_chainsaw\</mcitem\>
-- \<mcitem\>techreborn:advanced_drill\</mcitem\>
-- \<mcitem\>techreborn:advanced_jackhammer\</mcitem\>
+- <McItem slug="techreborn:lithium_ion_batpack"/>
+- <McItem slug="techreborn:advanced_chainsaw"/>
+- <McItem slug="techreborn:advanced_drill"/>
+- <McItem slug="techreborn:advanced_jackhammer"/>
