--- a/docs/items/batteries/red_cell_battery.mdx
+++ b/docs/items/batteries/red_cell_battery.mdx
@@ -26,14 +26,14 @@ The **Red Cell Battery** is a portable battery used to charge items. For more de
 
 **Red Cell Batteries** are used as crafting ingredient in the following crafting recipes:
 
-- \<mcitem\>techreborn:battery_box\</mcitem\>
-- \<mcitem\>techreborn:basic_chainsaw\</mcitem\>
-- \<mcitem\>techreborn:basic_drill\</mcitem\>
-- \<mcitem\>techreborn:basic_jackhammer\</mcitem\>
-- \<mcitem\>techreborn:electric_treetap\</mcitem\>
-- \<mcitem\>techreborn:rock_cutter\</mcitem\>
-- \<mcitem\>techreborn:energy_storage_upgrade\</mcitem\>
-- \<mcitem\>techreborn:generator\</mcitem\>
+- <McItem slug="techreborn:battery_box"/>
+- <McItem slug="techreborn:basic_chainsaw"/>
+- <McItem slug="techreborn:basic_drill"/>
+- <McItem slug="techreborn:basic_jackhammer"/>
+- <McItem slug="techreborn:electric_treetap"/>
+- <McItem slug="techreborn:rock_cutter"/>
+- <McItem slug="techreborn:energy_storage_upgrade"/>
+- <McItem slug="techreborn:generator"/>
 
 ## History
 
