--- a/docs/items/batteries/lapotron_crystal.mdx
+++ b/docs/items/batteries/lapotron_crystal.mdx
@@ -13,21 +13,21 @@ The **Lapotron Crystal** is a portable battery used to charge items. For more de
 
 ## Recipe
 
-\<recipe\> input techreborn:lazurite_plate techreborn:industrial_circuit techreborn:lazurite_plate input techreborn:lazurite_plate techreborn:energy_crystal techreborn:lazurite_plate input techreborn:lazurite_plate techreborn:industrial_circuit techreborn:lazurite_plate output techreborn:lapotron_crystal \</recipe\>
+<CraftingTable recipe="input techreborn:lazurite_plate techreborn:industrial_circuit techreborn:lazurite_plate input techreborn:lazurite_plate techreborn:energy_crystal techreborn:lazurite_plate input techreborn:lazurite_plate techreborn:industrial_circuit techreborn:lazurite_plate output techreborn:lapotron_crystal" />
 
 ## Usage
 
-Used as an ingredient in the \<mcitem\>minecraft:crafting_table\</mcitem\> to produce:
+Used as an ingredient in the <McItem slug="minecraft:crafting_table"/> to produce:
 
-- \<mcitem\>techreborn:lapotronic_energy_orb\</mcitem\>
-- \<mcitem\>techreborn:MFSU\</mcitem\>
-- \<mcitem\>techreborn:Energy_Flow_Chip\</mcitem\>
-- \<mcitem\>techreborn:nanosaber\</mcitem\>
-- \<mcitem\>techreborn:quantum_boots\</mcitem\>
-- \<mcitem\>techreborn:quantum_chestplate\</mcitem\>
-- \<mcitem\>techreborn:quantum_helmet\</mcitem\>
-- \<mcitem\>techreborn:quantum_leggings\</mcitem\>
+- <McItem slug="techreborn:lapotronic_energy_orb"/>
+- <McItem slug="techreborn:MFSU"/>
+- <McItem slug="techreborn:Energy_Flow_Chip"/>
+- <McItem slug="techreborn:nanosaber"/>
+- <McItem slug="techreborn:quantum_boots"/>
+- <McItem slug="techreborn:quantum_chestplate"/>
+- <McItem slug="techreborn:quantum_helmet"/>
+- <McItem slug="techreborn:quantum_leggings"/>
 
-Used as an ingredient in the \<mcitem\>techreborn:assembling_machine\</mcitem\> to produce:
+Used as an ingredient in the <McItem slug="techreborn:assembling_machine"/> to produce:
 
-- \<mcitem\>techreborn:Energy_Flow_Chip\</mcitem\>
+- <McItem slug="techreborn:Energy_Flow_Chip"/>
