massive effort of lifting all machine content over

--- a/docs/blocks/machines/machines.mdx
+++ b/docs/blocks/machines/machines.mdx
@@ -8,46 +8,46 @@ sidebar_position: 4
 Tech Reborn has several tiers of different kind of machines:
 
 - Non-Electric
-  - \<mcitem\>techreborn:iron_alloy_furnace\</mcitem\>
-  - \<mcitem\>techreborn:iron_furnace\</mcitem\>
+  <McItem slug="techreborn:iron_alloy_furnace"/>
+  <McItem slug="techreborn:iron_furnace"/>
 - Low
-  - \<mcitem\>techreborn:alloy_smelter\</mcitem\>
-  - \<mcitem\>techreborn:auto_crafting_table\</mcitem\>
-  - \<mcitem\>techreborn:compressor\</mcitem\>
-  - \<mcitem\>techreborn:electric_furnace\</mcitem\>
-  - \<mcitem\>techreborn:extractor\</mcitem\>
-  - \<mcitem\>techreborn:greenhouse_controller\</mcitem\>
-  - \<mcitem\>techreborn:grinder\</mcitem\>
-  - \<mcitem\>techreborn:industrial_centrifuge\</mcitem\>
-  - \<mcitem\>techreborn:recycler\</mcitem\>
-  - \<mcitem\>techreborn:rolling_machine\</mcitem\>
-  - \<mcitem\>techreborn:scrapbox-inator\</mcitem\>
-  - \<mcitem\>techreborn:solid_canning_machine\</mcitem\>
-  - \<mcitem\>techreborn:wire_mill\</mcitem\>
-  - \<mcitem\>techreborn:elevator\</mcitem\>
-  - \<mcitem\>techreborn:block_breaker\</mcitem\>
-  - \<mcitem\>techreborn:block_placer\</mcitem\>
+  <McItem slug="techreborn:alloy_smelter"/>
+  <McItem slug="techreborn:auto_crafting_table"/>
+  <McItem slug="techreborn:compressor"/>
+  <McItem slug="techreborn:electric_furnace"/>
+  <McItem slug="techreborn:extractor"/>
+  <McItem slug="techreborn:greenhouse_controller"/>
+  <McItem slug="techreborn:grinder"/>
+  <McItem slug="techreborn:industrial_centrifuge"/>
+  <McItem slug="techreborn:recycler"/>
+  <McItem slug="techreborn:rolling_machine"/>
+  <McItem slug="techreborn:scrapbox-inator"/>
+  <McItem slug="techreborn:solid_canning_machine"/>
+  <McItem slug="techreborn:wire_mill"/>
+  <McItem slug="techreborn:elevator"/>
+  <McItem slug="techreborn:block_breaker"/>
+  <McItem slug="techreborn:block_placer"/>
 - Medium
-  - \<mcitem\>techreborn:assembling_machine\</mcitem\>
-  - \<mcitem\>techreborn:chemical_reactor\</mcitem\>
-  - \<mcitem\>techreborn:distillation_tower\</mcitem\>
-  - \<mcitem\>techreborn:implosion_compressor\</mcitem\>
-  - \<mcitem\>techreborn:industrial_blast_furnace\</mcitem\>
-  - \<mcitem\>techreborn:industrial_electrolyzer\</mcitem\>
-  - \<mcitem\>techreborn:industrial_grinder\</mcitem\>
-  - \<mcitem\>techreborn:saw_mill\</mcitem\>
-  - \<mcitem\>techreborn:vacuum_freezer\</mcitem\>
-  - \<mcitem\>techreborn:pump\</mcitem\>
-  - \<mcitem\>techreborn:fishing_station\</mcitem\>
-  - \<mcitem\>techreborn:launchpad\</mcitem\>
+  <McItem slug="techreborn:assembling_machine"/>
+  <McItem slug="techreborn:chemical_reactor"/>
+  <McItem slug="techreborn:distillation_tower"/>
+  <McItem slug="techreborn:implosion_compressor"/>
+  <McItem slug="techreborn:industrial_blast_furnace"/>
+  <McItem slug="techreborn:industrial_electrolyzer"/>
+  <McItem slug="techreborn:industrial_grinder"/>
+  <McItem slug="techreborn:saw_mill"/>
+  <McItem slug="techreborn:vacuum_freezer"/>
+  <McItem slug="techreborn:pump"/>
+  <McItem slug="techreborn:fishing_station"/>
+  <McItem slug="techreborn:launchpad"/>
 - High
-  - \<mcitem\>techreborn:Charge_O_Mat\</mcitem\>
-  - \<mcitem\>techreborn:fluid_replicator\</mcitem\>
+  <McItem slug="techreborn:Charge_O_Mat"/>
+  <McItem slug="techreborn:fluid_replicator"/>
 - Extreme
   - *There are no machines in this tier. Only generators, transformers and power storage*
 - Insane
-  - \<mcitem\>techreborn:fusion_control_computer\</mcitem\>
-  - \<mcitem\>techreborn:matter_fabricator\</mcitem\>
+  <McItem slug="techreborn:fusion_control_computer"/>
+  <McItem slug="techreborn:matter_fabricator"/>
 
 ## Upgrades
 
